# Directory-chatbot

./: .env.example  .gitignore  README.md  activate.sh  pyproject.toml  requirements.txt  run.sh
example/chatbot_streamlit/: app.py
mcp_chatbot/: __init__.py
mcp_chatbot/chat/: session.py
mcp_chatbot/llm/: __init__.py  ollama.py
mcp_chatbot/mcp/: client.py
mcp_servers/: file_system.py  markdown_processor.py  servers_config.json
src/: main.py  main_rag_chatbot.py  run_streamlit.py  test_installation.py
src/config/: model_config.py  settings.py
src/core/: llm_client.py
src/mcp/: file_system_server.py  mcp_client.py
src/rag/: document_processor.py  rag_manager.py  vector_store.py
src/ui/: streamlit_app.py
src/utils/: utils.py
