[project]
name = "mcp-simple-chatbot"
version = "0.1.0"
description = "A simple CLI chatbot using the Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Wendiago" }]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "mcp[cli]>=1.0.0",
    "uvicorn>=0.32.1",
    "streamlit>=1.43.2",
    "fastmcp>=2.10.5",
]

[project.scripts]
mcp-simple-chatbot = "mcp_simple_chatbot.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_simple_chatbot"]

[tool.pyright]
include = ["mcp_simple_chatbot"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.379",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "black>=24.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = false
